        the conversion from/to unicode for WebDAV/FTP operations.

      - the ZPT implementation has now a configurable option in order how to
        deal with UnicodeDecodeErrors. A custom UnicodeEncodingConflictResolver
        can be configured through ZCML (see
        Products/PageTemplates/(configure.zcml, unicodeconflictresolver.py,
        interfaces.py)

    Bugs Fixed

      - Collector #2191: extended DateTime parser for better support
        to the ISO8601 specification.

      - Reworking of _cached_result in Shared.DC.ZRDB.DA.DA:

        - fixed KeyError reported in Collector #2212

        - fixed two memory leaks that occurred under high load

        - fixed broken cache keys for people using the obscure
          Shared.DC.ZRDB.DA.DA.connection_hook

        - fixed incorrect cache ordering resulting in newer results
          being dumped when the cache became too large.

      - Collector #2237: 'make' doesn't tell you to run 'make inplace'
        before running 'make instance'.

      - Collector #2232: Can't call DTML templates from Page Templates

      - Collector #2198: Zope 3.3 fix breaks Five 1.5 test_getNextUtility

      - Collector #2206: Set PYTHONPATH to include existing PYTHONPATH
        in skel/bin/zopectl.in and skel/bin/runzope.in

      - Collector #2209: ZTUtils module could not be used inside ZPT

      - Collector #2208: rewriting/setting the 'charset' part of the
        content-type HTTP header will be done only for 'text/*'

      - Call setDefaultSkin on new requests created as the result of
        ConflictError retries.

      - Collector #2155: Fix wrong parameter being passed to
        logger's error() method, with tests.

      - Collector #2157: Expose name of broken class in SystemError raised
        from '__getstate__' of a broken instance.

      - Usage of 'urljoin' in 'webdav.davcmds' could lead to wrongly
        constructed urls.

      - reStructuredText/ZReST: setting raw_enabled to 0 for security